# fluxfakr

./: .gitignore  .nojekyll  Cargo.toml  README.md  contributor-developer-guide.html  core-concepts-and-architecture.html  faq-and-troubleshooting.html  getting-started.html  how-to-guides.html  index.html  roadmap.html  robots.txt  search.json  sitemap.xml  styles.css
.github/workflows/: build.yml
docs/: _quarto.yml  contributor-developer-guide.qmd  core-concepts-and-architecture.qmd  faq-and-troubleshooting.qmd  getting-started.qmd  how-to-guides.qmd  index.qmd  roadmap.qmd
src/: main.rs
src/generator/: market.rs  mod.rs  stock.rs  supermarket_sales.rs
tests/: integration_tests.rs
