[package]
name = "fluxfakr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"
rand_distr = "0.5.0"
ctrlc = "3.2"
rdkafka = "0.37.0"
wasmtime = "29.0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.3"
nix = "0.29.0"

[profile.release]
incremental = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"